--- a/coast.html
+++ b/coast.html
@@ -23,7 +23,11 @@
             </li>
         </ul>
     </nav>
-
+    <section>
+        <figure>
+            <img src="assets/images/beach.jpg" alt="an image of coast Dublin">
+        </figure>
+    </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
