--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             </li>
         </ul>
     </nav>
+    <section>
+        <figure>
+            <img src="assets/images/city.jpg" alt="an image of urban Dublin">
+        </figure>
+    </section>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
